# ezGfx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: SandBox.cpp
ez/: CMakeLists.txt
ez/src/ez/Core/: Base.hpp  Logger.hpp  StrongHandle.hpp  UIApp.cpp  UIApp.hpp
ez/src/ez/Graphics/API/: RenderAPI.cpp  RenderAPI.hpp  StreamStorage.hpp  TextureArray.hpp
ez/src/ez/Graphics/API/OpenGL/: GL_API.cpp  GL_API.hpp  GL_BuiltinShader.hpp  GL_DebugOutput.hpp  GL_Shader.cpp  GL_TextureArray.cpp
ez/src/ez/Graphics/Renderer/: Color.cpp  Color.hpp  Font.hpp  Renderer.cpp  Renderer.hpp
ezUI/: CMakeLists.txt
ezUI/src/ez/: ez.hpp
ezUI/src/ez/Core/: Base.hpp  Logger.cpp  Profiling.cpp  Profiling.hpp  UIApp.cpp  UIApp.hpp
ezUI/src/ez/Graphics/API/: Enums.hpp  RenderAPI.cpp  RenderAPI.hpp  Shader.hpp  StreamStorage.hpp  TextureArray.hpp
ezUI/src/ez/Graphics/API/OpenGL/: GL_API.cpp  GL_API.hpp  GL_BuiltinShader.hpp  GL_DebugOutput.cpp  GL_DebugOutput.hpp  GL_MappedStreamBuffer.cpp  GL_MappedStreamBuffer.hpp  GL_Shader.cpp  GL_Shader.hpp  GL_TextureArray.cpp  GL_TextureArray.hpp
ezUI/src/ez/Graphics/Renderer/: Color.cpp  Color.hpp  Font.cpp  Font.hpp  Renderer2D.cpp  Renderer2D.hpp
ezUI/src/ez/Graphics/UI/: Scene.hpp
